fix: [opensearch] Use aggregation by processDefinitionId and tenantId for process retrieval (#3642)